--- a/start-quick-lca.Rmd
+++ b/start-quick-lca.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A Quick Latent Class Analysis (LCA) from Start to Finish in `MplusAutomation`"
 author: '*Adam Garber*'
-subtitle: "IMMERSE Video Series Funded by IES "
+subtitle: "IMMERSE Video Series supported by IES "
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: pdf_document
 ---
@@ -10,34 +10,66 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE, message = FALSE, warning = FALSE)
 ```
 
-What is included in this video tutorial?
+# --------------------------------------------------------------------------------------
 
-A demonstration of the speed at which an LCA analysis can be estimated and summarized using the `Tidy MplusAutomation` method.  
+## What is included in this video tutorial?
+
+> A demonstration of the speed at which an LCA analysis can be estimated and summarized using the `Tidy MplusAutomation` method.  
 
 # --------------------------------------------------------------------------------------
 
 ## Tutorial Outline
-   
-1.  
-2.  
-3.  Install & load packages
-4.  Read in data to R
-5.  Look at LCA indicator variables
-6.  Run a `type=basic` model using `MplusAutomation`
-7.  
-8.  
-9.  
 
-# -------------------------------------------------------------------------------------- 
-
-## Github repository (everything you need to replicate analysis):
-
-https://github.com/garberadamc/QF-Getting-Started
+0.  Download scripts & data from Github repository
+1.  Introduction to data example & LCA indicator variables 
+2.  Load packages
+3.  Read in data to R
+4.  Enumeration: Estimate LCA models with 1-6 classes 
+5.  Create model fit table
+6.  Plot information criteria (elbow plot)
+7.  Compare conditional item probability plots 
+8.  Plot final model in publication format (e.g., Class-3 model)
 
 
 # -------------------------------------------------------------------------------------- 
 
-## Load packages
+## 0. Github repository (everything you need to replicate analysis):
+
+# -------------------------------------------------------------------------------------- 
+
+**Link:** https://github.com/immerse-ucsb/quick-lca-mplusauto
+
+# --------------------------------------------------------------------------------------
+
+## 1. Data Source: Civil Rights Data Collection (CRDC)
+
+# --------------------------------------------------------------------------------------
+
+> The CRDC is a federally mandated school and district level data collection effort that occurs every other year. This public data is currently available for selected variables across 4 years (2011, 2013, 2015, 2017) and all US states. In the following tutorial six focal variables are utilized as indicators of the latent class model; three variables which report on harassment/bullying in schools based on disability, race, or sex, and three variables on full-time equivalent school staff employees (counselor, psychologist, law enforcement). For this example, we utilize a sample of schools from the state of Arizona reported in 2017.
+
+**Information about CRCD:** https://www2.ed.gov/about/offices/list/ocr/data.html
+
+**Data access (`R`):** https://github.com/UrbanInstitute/education-data-package-r
+
+# -------------------------------------------------------------------------------------- 
+
+## Latent Class Indicator Variables
+
+`report_dis`  = Number of students harassed or bullied on the basis of disability
+
+`report_race` = Number of students harassed or bullied on the basis of race, color, national origin
+
+`report_sex`  = Number of students harassed or bullied on the basis of sex 
+
+`counselors_fte` = Number of full time equivalent counselors hired as school staff
+
+`psych_fte` = Number of full time equivalent psychologists hired as school staff
+
+`law_fte` = Number of full time equivalent law enforcement officers hired as school staff
+
+# --------------------------------------------------------------------------------------
+
+## 2. Load packages
 
 # --------------------------------------------------------------------------------------
 
@@ -51,18 +83,9 @@ library(gt); library(reshape2); library(cowplot) # tables & figures
 
 # --------------------------------------------------------------------------------------
 
-Data Source Information:
-
-https://github.com/UrbanInstitute/education-data-package-r
-
-https://educationdata.urban.org/documentation/index.html#data_sources
-
-Variable terms & definitions
-https://www.isbe.net/Documents/Civil-Rights-Data-Collection-Terms.pdf
+## Read in CSV data file from the `data` subfolder
 
 # --------------------------------------------------------------------------------------
-
-## Read in CSV data file from the `data` subfolder
 
 ```{r}
 
@@ -72,58 +95,13 @@ bully_data <- read_csv(here("data", "crdc_lca_data.csv"))
 
 # --------------------------------------------------------------------------------------
 
-## Indicator Variables
-
-`report_dis`  = Number of students harassed or bullied on the basis of disability 
-`report_race` = Number of students harassed or bullied on the basis of race, color, or national origin  
-`report_sex`  = Number of students harassed or bullied on the basis of sex 
-`counselors_fte` = Number of full time equivalent counselors hired as school staff
-`psych_fte` = Number of full time equivalent psychologists hired as school staff
-`law_fte` = Number of full time equivalent law enforcement officers hired as school staff
-
-
-# --------------------------------------------------------------------------------------
-
-## Run a first model using the `mplusObject()` method 
-
-Model is `type = BASIC;` (i.e., returns descriptive statistics)
-```{r,eval=FALSE}
-
-m_basic  <- mplusObject(
-  
-  TITLE = "Explore descriptives with TYPE = BASIC", 
-  
-  VARIABLE = 
- "",
-  
-  ANALYSIS = 
- "",
- 
-  usevariables = colnames(), 
-  rdata = )
-
-m_basic_fit <- mplusModeler( , 
-               dataout=here("", ""),
-               modelout=here("", ".inp"),
-               check=TRUE, run = TRUE, hashfilename = FALSE)
-
-```
-
-## Always check your model!
-
-- In the RStudio window pane on the `bottom-right`under the `files` tab click on the `mplus_files` folder
-- There should be 3 new files in this location that were produced by `mplusModeler()`
-- Click on the output file (`.out`) to check if the model estimated or if there are any error messages
-
-# --------------------------------------------------------------------------------------
-
-# Enumeration
+## 4. Enumeration
 
 # --------------------------------------------------------------------------------------
 
 ```{r, eval=FALSE}
 
-lca_k1_8  <- lapply(1:8, function(k) {
+lca_k1_6  <- lapply(1:6, function(k) {
   
   lca_enum  <- mplusObject(
       
@@ -137,17 +115,17 @@ lca_k1_8  <- lapply(1:8, function(k) {
   ANALYSIS = 
    "estimator = mlr; 
     type = mixture;
-    starts = ; 
+    starts = 500 100; 
     processors = 10;",
   
   OUTPUT = "tech11 tech14;",
   
   PLOT = 
     "type = plot3; 
-     series = (*);",
+     series = report_dis report_race report_sex counselors_fte psych_fte law_fte (*);",
   
-  usevariables = colnames(bully_staff),
-  rdata = bully_staff)
+  usevariables = colnames(),
+  rdata = )
 
 lca_enum_fit <- mplusModeler(lca_enum, 
                             dataout=glue(here("", ".dat")),
@@ -157,9 +135,14 @@ lca_enum_fit <- mplusModeler(lca_enum,
 
 ```
 
+## Always check your model!
+
+- In the RStudio window pane on the `bottom-right`under the `files` tab click on the `mplus_lca` folder
+- Click on one of the Mplus output files (`.out`) to check if the model estimated or if there are any error messages
+
 # --------------------------------------------------------------------------------------
 
-##  1.2 Generate Model Fit Summary Table 
+##  5. Generate Model Fit Summary Table 
 
 - This syntax can be used to compare model fit from the series of LCA models generated during enumeration
 - The code produces a table that is approximately in APA format. 
@@ -167,6 +150,7 @@ lca_enum_fit <- mplusModeler(lca_enum,
 # --------------------------------------------------------------------------------------
 
 Read in model fit statistics using `readModels()` and `mixtureSummaryTable()` functions
+
 ```{r}
 output_lca <- readModels(here(""), quiet = TRUE)
 
@@ -176,7 +160,10 @@ enum_summary <- LatexSummaryTable(output_lca,
                 sortBy = "Title")
 ```
 
+# --------------------------------------------------------------------------------------
+
 Calculate relevant fit indices for summary table
+
 ```{r}
 allFit <- enum_summary %>% 
   mutate(aBIC = -2*LL+Parameters*log((Observations+2)/24)) %>% 
@@ -190,8 +177,10 @@ allFit <- enum_summary %>%
   arrange(Parameters)
 ```
 
+# --------------------------------------------------------------------------------------
 
 Generate the fit summary table
+
 ```{r}
 allFit %>% 
   mutate(Title = str_remove(Title, " LCA Enumeration ")) %>% 
@@ -237,7 +226,7 @@ allFit %>%
 
 # --------------------------------------------------------------------------------------
 
-##  1.3 Plot Information Criteria 
+##  6. Plot Information Criteria 
 
 # --------------------------------------------------------------------------------------
 
@@ -257,31 +246,34 @@ allFit %>% dplyr::select(2:7) %>%
   labs(x = "Number of Classes", y = "Information Criteria Value") +
   theme_cowplot() + theme(legend.title = element_blank(), legend.position = "top")
 ```
+
 ```{r, eval=FALSE}
-ggsave(here("figures","FIT_BullyStaff_TX17.png"),    
+ggsave(here("",".png"),    
        dpi=300, height=4, width=6, units="in")    
 ```
 
 # --------------------------------------------------------------------------------------
 
-##  1.4 Compare Conditional Item Probability Plots
+##  7. Compare Conditional Item Probability Plots
 
 # --------------------------------------------------------------------------------------
 
 ```{r, fig.width = 7, fig.height = 5}
 
 model_results <- data.frame()
-for (i in 1:length(output_17)) {
-  temp <- data.frame(unclass(output_17[[i]]$parameters$unstandardized)) %>% 
+for (i in 1:length(output_lca)) {
+  temp <- data.frame(unclass(output_lca[[i]]$parameters$probability.scale)) %>% 
     mutate(model = paste0(i, "-Class Model")) 
   model_results <- rbind(model_results, temp) }
 
-pp_plots <- model_results %>% 
-  filter(paramHeader == "Thresholds") %>% dplyr::select(est, model, LatentClass, param) %>% 
-  mutate(prob = (1 / (1 + exp(est))), param = str_to_title(str_remove_all(param, "[$1]")))
+pp_plots <- model_results %>% filter(category == 2) %>%
+  dplyr::select(est, model, LatentClass, param) %>%
+  mutate(param = as.factor(str_to_lower(param))) 
+
+pp_plots$param <- fct_inorder(pp_plots$param)
 
 ggplot(pp_plots,
-       aes(x = param, y = prob, color = LatentClass, shape = LatentClass, group = LatentClass)) + 
+       aes(x = param, y = est, color = LatentClass, shape = LatentClass, group = LatentClass)) + 
   geom_point() + geom_line() + facet_wrap(~ model, ncol = 2) + labs(x= "", y = "Probability") +
   theme_minimal() + theme(legend.position = "none", axis.text.x = element_text(size = 6))
 ```
@@ -289,7 +281,7 @@ ggplot(pp_plots,
 
 # --------------------------------------------------------------------------------------
 
-##  1.5 Plot Final Model - Conditional Item Probability Plot 
+##  8. Plot Final Model - Conditional Item Probability Plot 
 
 # --------------------------------------------------------------------------------------
 
@@ -303,12 +295,19 @@ ggplot(pp_plots,
 - `class_legend_order` = change the order that class names are listed in the plot legend (e.g., `c(2,1,3)`)
 - `plot_title`: include the title of the plot here (e.g., `"LCA Posterior Probability Plot"`)
 
+# --------------------------------------------------------------------------------------
+
 Read in plot data from Mplus output file `c3_lca.out`
+
 ```{r}
 
-model_c3 <- readModels(here("enum2_CA17", "c3_lca.out"), quiet = TRUE)
+model_c3 <- readModels(here("", ".out"), quiet = TRUE)
                            
 ```
+
+# --------------------------------------------------------------------------------------
+
+Load `plot_lca_function` into R environment
 
 ```{r}
 
@@ -351,18 +350,21 @@ return(p)
 
 ```
 
-## Run C3 Plot
+# --------------------------------------------------------------------------------------
+
+Run C3 Plot
 ```{r}
 
 plot_lca_function(
-  model_name = model_c3, 
-  item_num = 6,
-  class_num = 3,
+  model_name = , 
+  item_num = ,
+  class_num = ,
   item_labels = c("harassment: disability","harassment: race","harassment: sex",
-                  "school staff: counselor","school staff: psychologist","school staff: law enforcement"),
+                  "school staff: counselor","school staff: psychologist",
+                  "school staff: law enforcement"),
   class_labels = c("C1","C2","C3"),
   class_legend_order = c(1,2,3),
-  plot_title = "California: Harrasment & School Staff (K = 3)"
+  plot_title = "Harrasment & School Staff (K = 3)"
   )
 
 ```
@@ -372,6 +374,43 @@ ggsave(here("",".png"),
        dpi=300, height=4, width=6, units="in")    
 ```
 
+# --------------------------------------------------------------------------------------
 
+## References
+
+# --------------------------------------------------------------------------------------
+
+Hallquist, M. N., & Wiley, J. F.
+(2018).
+MplusAutomation: An R Package for Facilitating Large-Scale Latent Variable Analyses in Mplus.
+Structural equation modeling: a multidisciplinary journal, 25(4), 621-638.
+
+Muthén, B. O., Muthén, L. K., & Asparouhov, T.
+(2017).
+Regression and mediation analysis using Mplus.
+Los Angeles, CA: Muthén & Muthén.
+
+Muthén, L.K.
+and Muthén, B.O.
+(1998-2017).
+Mplus User's Guide.
+Eighth Edition.
+Los Angeles, CA: Muthén & Muthén
+
+US Department of Education Office for Civil Rights.
+(2014). 
+Civil rights data collection data snapshot: School discipline. 
+Issue brief no. 1.
+
+R Core Team (2017).
+R: A language and environment for statistical computing.
+R Foundation for Statistical Computing, Vienna, Austria.
+URL <http://www.R-project.org/>
+
+Wickham et al., (2019).
+Welcome to the tidyverse.
+Journal of Open Source Software, 4(43), 1686, <https://doi.org/10.21105/joss.01686>
+
+# --------------------------------------------------------------------------------------
 
 
